# BTMR-Paper

./: .env.example  .gitignore  DATABASE_INTEGRATION.md  DEVELOPMENT.md  Dockerfile.backend  README.DOCKER.md  README.md  arxiv_caption_analysis.md  arxiv_fetcher.py  check_classification.py  check_final_improvements.py  config.json  docker-compose.yml  html_generator.py  image_processor.py  main.py  paper_extractor.py  pyproject.toml  requirements-lite.txt  requirements.txt  startup.sh  streamlit_app.py  test_backend_logging.py  test_logging.py  test_streamlit.py
examples/: waferllm.html
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Banner.tsx  LanguageSwitcher.tsx  Layout.tsx
frontend/src/context/: NotificationContext.tsx
frontend/src/i18n/: index.ts
frontend/src/locales/en/: common.json  navigation.json  pages.json  validation.json
frontend/src/locales/zh/: common.json  navigation.json  pages.json  validation.json
frontend/src/pages/: HomePage.tsx  PaperDetailPage.tsx  PapersPage.tsx  ProcessPaperPage.tsx  SettingsPage.tsx  StatisticsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: cleanup_output.py
src/: __init__.py  arxiv_fetcher.py  config.py  html_generator.py  image_processor.py  logging_config.py  metadata_logger.py  paper_extractor.py  pdf_generator.py  pdf_generator_playwright.py  pdf_generator_weasyprint.py  utils.py
src/api/: __init__.py  config_service.py  main.py  models.py  routes.py  services.py
src/database/: __init__.py  interface.py  metadata_manager.py  sqlite_impl.py
tests/: __init__.py  test_api.py
